# OpenPanther

./: .gitignore  Deep_c_server_wan  README.md  __init__.py  mutli.txt  net.sh  test_multi.sh  throttle.sh
bazel/: emp-sh2pc.BUILD  repositories.bzl  seal.BUILD
bazel/patches/: emp-sh2pc.patch  hexl.patch
experimental/ann/: BUILD.bazel  batch_argmax_prot.cc  batch_argmax_prot.h  batch_argmax_test.cc  bitwidth_change_prot.cc  bitwidth_change_prot.h  bitwidth_change_test.cc  common.cc  common.h  common_test.cc  const.params  dist_cmp.cc  dist_cmp.h  dist_cmp_test.cc  distance_benchmark.cc  panther10M_c.cc  panther10M_s.cc  panther_client.cc  panther_client_random.cc  panther_demo.cc  panther_demo_test.cc  panther_local_test.cc  panther_plain.cc  panther_server.cc  panther_server_random.cc  panther_util.cc  panther_util.h  panther_util_test.cc  sanns_demo.cc  sanns_plain.cc  ss_dist_cmp_test.cc  test_topk.cc  topk.cc  topk.h  topk_benchmark.cc
experimental/ann/fix_pir/: seal_mpir.cc  seal_mpir.h  seal_mpir_test.cc  seal_pir.cc  seal_pir.h  seal_pir_test.cc  seal_pir_utils.h
experimental/ann/fix_pir_customed/: seal_mpir.cc  seal_mpir.h  seal_mpir_test.cc  seal_pir.cc  seal_pir.h  seal_pir_test.cc
experimental/panther/: BUILD.bazel  batch_argmax_prot.cc  batch_argmax_prot.h  batch_argmax_test.cc  batch_min.h  batch_min_prot.cc  batch_min_prot.h  batch_min_test.cc  bitwidth_adjust.cc  bitwidth_adjust_prot.cc  bitwidth_adjust_prot.h  bitwidth_adjust_test.cc  bitwidth_change_prot.cc  bitwidth_change_prot.h  bitwidth_change_test.cc  common.cc  common.h  dependency.txt  dist_cmp.cc  dist_cmp.h  dist_cmp_ss_test.cc  dist_cmp_test.cc  distance_benchmark.cc  gc_topk_test.cc  mixed_topk_benchmark.cc  panther10M_c.cc  panther10M_s.cc  panther_client.cc  panther_client_random.cc  panther_local_test.cc  panther_plain.cc  panther_server.cc  panther_server_random.cc  ss_dist_cmp_test.cc  test_topk.cc  topk.cc  topk_benchmark.cc  topk_test.cc
experimental/panther/benchmark/: distance_benchmark.cc  panther10M_c.cc  panther10M_s.cc  panther_plain.cc  random_panther_client.h  random_panther_server.h
experimental/panther/customize_pir/: seal_mpir.cc  seal_pir.cc  seal_pir.h  seal_pir_test.cc
experimental/panther/demo/: panther_client.cc  panther_client_deep10M.cc  panther_server.cc  panther_server_deep10M.cc
experimental/panther/fix_pir_customed/: BUILD.bazel  seal_mpir.cc  seal_mpir.h  seal_mpir_test.cc
experimental/panther/k-means/: accuracy_test.py  convert_model_to_input.ipynb  convert_model_to_input.py  sanns_kmeans.py
experimental/panther/protocol/: dist_cmp.cc
experimental/panther/protocol/customize_pir/: seal_mpir_test.cc  seal_pir.cc  serializable.proto
experimental/squirrel/: utils.cc  utils_test.cc
intrinsic/: BUILD.bazel  __init__.py  add_new_intrinsic.py  dot_then_softmax_impl.py  example_impl.py  f_1702_sigmoid_impl.py  f_batch_3_cmp_impl.py  f_gelu_impl.py  f_greater_4_impl.py  f_less_minus_2_impl.py  f_less_minus_4_impl.py  f_mul_no_trunc_impl.py  f_trunc_negative_impl.py  f_trunc_positive_impl.py  sigmoid_impl.py
libspu/compiler/passes/: BUILD.bazel
libspu/fix_pir/: BUILD.bazel  seal_mpir.cc  seal_mpir.h  seal_mpir_test.cc  seal_pir.cc  seal_pir.h  seal_pir_test.cc  seal_pir_utils.cc
libspu/mpc/cheetah/: state.cc  state.h
libspu/mpc/cheetah/arith/: common.h
libspu/mpc/cheetah/nonlinear/: BUILD.bazel  compare_prot_test.cc  extension_prot.cc  extension_prot.h  extension_prot_test.cc
libspu/mpc/cheetah/ot/: ferret.cc  ferret_ot_interface.h  ferret_test.cc  mitccrh_exp.h  ot_util.h  util.h  util_test.cc
libspu/mpc/cheetah/ot/emp/: BUILD.bazel  ferret.h  mitccrh_exp.h
libspu/mpc/cheetah/ot/yacl/: ferret.cc  ferret.h  mitccrh_exp.h  yacl_ote_adapter.cc  yacl_ote_adapter.h
libspu/mpc/utils/: simulate.h
libspu/psi/core/: ecdh_oprf_psi.cc
libspu/psi/core/labeled_psi/: apsi_test.cc
libspu/psi/cryptor/: BUILD.bazel  ecc_cryptor.cc  sodium_curve25519_cryptor.cc
test_log/: Deep_client  Deep_client_wan  Deep_server  Deep_server_wan  client  client.txt  client1.txt  client1_wan.txt  client_wan  client_wan.txt  deep_client  deep_client_lan  deep_server  deep_server_lan  server  server.txt  server1.txt  server1_wan.txt  server_wan  server_wan.txt
test_log/script/: comm.txt  deep2.txt  deep_1.txt  log_ana.sh  log_ana_deep.sh  recv.txt  time.txt  wan-comm.txt  wan-recv.txt  wan-time.txt
tests/: BUILD.bazel  jax_hij_intrinsic.py  jnp_debug.py
