# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "all_intrinsics",
    srcs = [
        "__init__.py",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":example",
        ":fxp_base",
        # DO-NOT-EDIT:ADD_IMPORT
    ],
)

py_library(
    name = "example",
    srcs = ["example_impl.py"],
    visibility = [
        "//visibility:private",
    ],
)

py_library(
    name = "fxp_base",
    srcs = [
        "f_1702_sigmoid_impl.py",
        "f_less_minus_2_impl.py",
        "f_less_minus_4_impl.py",
        "f_greater_4_impl.py",
        "f_mul_no_trunc_impl.py",
        "f_trunc_negative_impl.py",
        "f_trunc_positive_impl.py",
        "f_batch_3_cmp_impl.py",
    ],
    visibility = [
        "//visibility:private",
    ],
)

        
py_library(
    name = "f_batch_3_cmp",
    srcs = [
        "f_batch_3_cmp_impl.py",
    ],
    visibility = [
        "//visibility:private",
    ],
)
        