# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "AES_COPT_FLAGS")
load("//bazel:spu.bzl",  "spu_cc_test", "spu_cc_library", "spu_cc_binary")

package(default_visibility = ["//visibility:public"])
spu_cc_test(
    name = "dist_cmp_test",
    srcs = ["dist_cmp_test.cc"],
    deps = [
        ":dist_cmp",
        "//libspu/mpc/cheetah/rlwe:lwe",
        "@com_github_microsoft_seal//:seal",
    ],
)
spu_cc_test(
    name = "batch_argmax_test",
    srcs = ["batch_argmax_test.cc"],
    deps =[
        ":batch_argmax_prot",
        "//libspu/mpc:factory",
        "//libspu/mpc/utils:simulate",
    ]
)

spu_cc_library(
    name = "batch_argmax_prot",
    srcs = ["batch_argmax_prot.cc"],
    hdrs = ["batch_argmax_prot.h"],
    deps = [
        "//libspu/mpc/cheetah/nonlinear:compare_prot",
        "//libspu/mpc/cheetah/nonlinear:equal_prot",
        "//libspu/mpc/cheetah/nonlinear:truncate_prot",
        "//libspu/mpc/cheetah:state"
    ],
)
spu_cc_library(
    name = "dist_cmp",
    srcs = ["dist_cmp.cc"],
    hdrs = ["dist_cmp.h"],
    deps = [
        "//libspu/mpc/cheetah/rlwe:modswitch_helper",
        "//libspu/mpc/cheetah/arith:arith_comm",
        "@com_github_microsoft_seal//:seal",
        "@yacl//yacl/utils:parallel",
    ],
)

spu_cc_library(
    name = "topk",
    srcs = ["topk.cc"],
    hdrs = ["topk.h"],
    deps = [
    "@com_github_emptoolkit_emp_sh2pc//:emp-sh2pc",
    ],
)

spu_cc_binary(
    name = "sanns_demo",
    srcs = ["sanns_demo.cc"],
    copts = AES_COPT_FLAGS,
    deps = [
        ":dist_cmp",
        ":batch_argmax_prot",
        "//libspu/device:io",
        "@com_google_absl//absl/strings",
        "@llvm-project//llvm:Support",
        "@yacl//yacl/link:factory",
        "//libspu/mpc/cheetah:state",
        ":topk",
        "@com_github_openssl_openssl//:openssl",
    ],
)

spu_cc_binary(
    name = "test_topk",
    srcs = ["test_topk.cc"],
    copts = AES_COPT_FLAGS,
    deps = [
        ":topk",
        "@com_github_openssl_openssl//:openssl",
    ],
)